--- a/portfolio.html
+++ b/portfolio.html
@@ -45,21 +45,23 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="assets/images/psychic.jpg" class="img-fluid" alt="My Psychic Game">
+        <img src="assets/images/slapsico.png" class="img-fluid" alt="Project Slaps">
 
         <div class="wordBoxes">
           <h3>
-            <a href="https://code-tim.github.io/My-Psychic-Game/">My Psychic Game</a>
+            <!-- <a href="https://code-guy21.github.io/Slaps/">Project Slaps</a> -->
+            <a href="https://code-tim.github.io/Slaps/">Project Slaps</a>
           </h3>
         </div>
       </div>
 
-      <div class="work">
-        <img src="assets/images/mine.jpg" class="img-fluid" alt="Crystal Collector Game">
 
-        <div class="wordBoxes">
+      <div class="work">
+        <img src="assets/images/liribot.png" class="img-fluid" alt="Liri-Bot">
+
+        <div class="Liri-Bot">
           <h3>
-            <a href="https://code-tim.github.io/unit-4-game/">Crystal Collector Game</a>
+            <a href="https://github.com/Code-Tim/liri-node-app">Liri-Bot Node App</a>
           </h3>
         </div>
       </div>
@@ -85,12 +87,11 @@
       </div>
 
       <div class="work">
-        <img src="assets/images/slapsico.png" class="img-fluid" alt="Project Slaps">
+        <img src="assets/images/psychic.jpg" class="img-fluid" alt="My Psychic Game">
 
         <div class="wordBoxes">
           <h3>
-            <!-- <a href="https://code-guy21.github.io/Slaps/">Project Slaps</a> -->
-            <a href="https://code-tim.github.io/Slaps/">Project Slaps</a>
+            <a href="https://code-tim.github.io/My-Psychic-Game/">My Psychic Game</a>
           </h3>
         </div>
       </div>
