Added some apps

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,13 +55,42 @@
         </div>
       </div>
 
-
       <div class="work">
         <img src="assets/images/liribot.png" class="img-fluid" alt="Liri-Bot">
 
         <div class="Liri-Bot">
           <h3>
             <a href="https://github.com/Code-Tim/liri-node-app">Liri-Bot Node App</a>
+          </h3>
+        </div>
+      </div>
+
+      <div class="work">
+        <img src="assets/images/Word.jpg" class="img-fluid" alt="Constructor Word Game">
+
+        <div class="wordBoxes">
+          <h3>
+            <a href="https://github.com/Code-Tim/commandLineWordGuess">Constructor Word Game</a>
+          </h3>
+        </div>
+      </div>
+
+      <div class="work">
+        <img src="assets/images/mine.jpg" class="img-fluid" alt="Crystal Collector Game">
+
+        <div class="wordBoxes">
+          <h3>
+            <a href="https://code-tim.github.io/unit-4-game/">Crystal Collector Game</a>
+          </h3>
+        </div>
+      </div>
+
+      <div class="work">
+        <img src="assets/images/bamazon.png" class="img-fluid" alt="Bamazon">
+
+        <div class="wordBoxes">
+          <h3>
+            <a href="https://github.com/Code-Tim/wk12bamazon">Bamazon</a>
           </h3>
         </div>
       </div>
